fix horizontal scroll bar at bottom of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ html, body {
   line-height: 1.5;
   margin: 0;
   padding: 0;
+  overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
 * {
